7785810510 - Ajout du blanc dans la doc technique. + remplacement des échantillons de couleur par un composant + réorganisation de la doc des couleurs, alignée sur celle du site sdg.

--- a/public/index.html
+++ b/public/index.html
@@ -67,170 +67,115 @@
             <hr/>
             <!-- couleurs -->
             <h2 id="couleurs">Couleurs</h2>
+
+            <h3>Couleurs d’arrière-plan</h3>
+
+            <qc-color-doc token="white"
+                          title="Blanc"
+                          border="true"
+            ></qc-color-doc>
+
+
+            <h3>Couleur du texte</h3>
+
+            <qc-color-doc token="text-primary"
+                          title="Bleu foncé"
+            >
+            </qc-color-doc>
+
             <h3>Couleurs principales</h3>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-blue-pale"></div>
-                <div class="color-description">
-                    <strong>Bleu pâle</strong><br/>
-                    <code>--qc-color-blue-pale</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-blue-light"></div>
-                <div class="color-description">
-                    <strong>Bleu clair</strong><br/>
-                    <code>--qc-color-blue-light</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-blue-regular"></div>
-                <div class="color-description">
-                    <strong>Bleu</strong><br/>
-                    <code>--qc-color-blue-regular</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-blue-piv"></div>
-                <div class="color-description">
-                    <strong>Bleu piv</strong><br/>
-                    <code>--qc-color-blue-piv</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-blue-medium"></div>
-                <div class="color-description">
-                    <strong>Bleu moyen</strong><br/>
-                    <code  >--qc-color-blue-medium</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-blue-dark"></div>
-                <div class="color-description">
-                    <strong>Bleu foncé</strong><br/>
-                    <code  >--qc-color-blue-dark, --qc-color-text-primary</code>
-                </div>
-            </div>
+
+            <qc-color-doc token="blue-pale"
+                          title="Bleu pale"
+            ></qc-color-doc>
+
+            <qc-color-doc token="blue-light"
+                          title="Bleu clair"
+            ></qc-color-doc>
+            <qc-color-doc token="blue-regular"
+                          title="Bleu"
+            ></qc-color-doc>
+            <qc-color-doc token="blue-piv"
+                          title="Bleu PIV"
+            ></qc-color-doc>
+            <qc-color-doc token="blue-medium"
+                          title="Bleu moyen"
+            ></qc-color-doc>
+            <qc-color-doc token="blue-dark"
+                          title="Bleu foncé"
+            ></qc-color-doc>
+
+            <h3>Couleur d’accent</h3>
+
+            <qc-color-doc token="accent"
+                          title="Rose"
+            ></qc-color-doc>
 
             <h3>Niveaux de gris</h3>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-grey-pale"></div>
-                <div class="color-description">
-                    <strong>Gris pâle</strong><br/>
-                    <code>--qc-color-grey-pale</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-grey-light"></div>
-                <div class="color-description">
-                    <strong>Gris clair</strong><br/>
-                    <code  >--qc-color-grey-light</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-grey-regular"></div>
-                <div class="color-description">
-                    <strong>Gris</strong><br/>
-                    <code  >--qc-color-grey-regular</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-grey-medium"></div>
-                <div class="color-description">
-                    <strong>Gris moyen</strong><br/>
-                    <code  >--qc-color-grey-medium</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-grey-dark"></div>
-                <div class="color-description">
-                    <strong>Gris foncé</strong><br/>
-                    <code  >--qc-color-grey-dark</code>
-                </div>
-            </div>
+
+            <qc-color-doc token="grey-pale"
+                          title="Gris pale"
+            ></qc-color-doc>
+
+            <qc-color-doc token="grey-light"
+                          title="Gris clair"
+            ></qc-color-doc>
+            <qc-color-doc token="grey-regular"
+                          title="Gris"
+            ></qc-color-doc>
+            <qc-color-doc token="grey-medium"
+                          title="Gris moyen"
+            ></qc-color-doc>
+            <qc-color-doc token="grey-dark"
+                          title="Gris foncé"
+            ></qc-color-doc>
 
             <h3>Couleurs fonctionnelles</h3>
+
             <h4>Rouges</h4>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-pink-pale"></div>
-                <div class="color-description">
-                    <strong>Rose pâle</strong><br/>
-                    <code  >--qc-color-pink-pale</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-pink-regular qc-bg-color-accent"></div>
-                <div class="color-description">
-                    <strong>Rose</strong><br/>
-                    <code  >--qc-color-pink-regular, --qc-color-accent</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-red-regular"></div>
-                <div class="color-description">
-                    <strong>Rouge</strong><br/>
-                    <code  >--qc-color-red-regular, --qc-color-error</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-red-dark"></div>
-                <div class="color-description">
-                    <strong>Rouge foncé</strong><br/>
-                    <code  >--qc-color-red-dark, --qc-color-danger</code>
-                </div>
-            </div>
+
+            <qc-color-doc token="pink-pale"
+                          title="Rose pâle"
+            ></qc-color-doc>
+            <qc-color-doc token="pink-regular"
+                          title="Rose"
+            ></qc-color-doc>
+            <qc-color-doc token="red-regular"
+                          title="Rouge"
+            ></qc-color-doc>
+            <qc-color-doc token="red-dark"
+                          title="Rouge foncé"
+            ></qc-color-doc>
+
             <h4>Verts</h4>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-green-pale"></div>
-                <div class="color-description">
-                    <strong>Vert pâle</strong><br/>
-                    <code  >--qc-color-green-pale</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-green-regular"></div>
-                <div class="color-description">
-                    <strong>Vert</strong><br/>
-                    <code  >--qc-color-green-regular, --qc-color-success</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-green-dark"></div>
-                <div class="color-description">
-                    <strong>Vert foncé</strong><br/>
-                    <code  >--qc-color-green-dark</code>
-                </div>
-            </div>
+
+            <qc-color-doc token="green-pale"
+                          title="Vert pâle"
+            ></qc-color-doc>
+            <qc-color-doc token="green-regular"
+                          title="Vert"
+            ></qc-color-doc>
+            <qc-color-doc token="green-dark"
+                          title="Vert foncé"
+            ></qc-color-doc>
 
             <h4>Jaunes</h4>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-yellow-pale"></div>
-                <div class="color-description">
-                    <strong>Jaune pâle</strong><br/>
-                    <code  >--qc-color-yellow-pale</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-yellow-regular"></div>
-                <div class="color-description">
-                    <strong>Jaune</strong><br/>
-                    <code  >--qc-color-yellow-regular</code>
-                </div>
-            </div>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-yellow-dark"></div>
-                <div class="color-description">
-                    <strong>Jaune foncé</strong><br/>
-                    <code>--qc-color-yellow-dark</code>
-                </div>
-            </div>
+
+            <qc-color-doc token="yellow-pale"
+                          title="Jaune pâle"
+            ></qc-color-doc>
+            <qc-color-doc token="yellow-regular"
+                          title="Jaune"
+            ></qc-color-doc>
+            <qc-color-doc token="yellow-dark"
+                          title="Jaune foncé"
+            ></qc-color-doc>
+
             <h4>Violet</h4>
-            <div class="color-details">
-                <div class="color-sample qc-bg-color-purple"></div>
-                <div class="color-description">
-                    <strong>Violet</strong><br/>
-                    <code >--qc-color-purple, --qc-color-link-visited</code>
-                </div>
-            </div>
+
+            <qc-color-doc token="purple"
+                          title="Violet"
+            ></qc-color-doc>
 
             <hr />
 
@@ -480,11 +425,14 @@
             <h2 id="titre">Niveaux de titres</h2>
                     <p class="qc-h1">Titre de niveau 1</p>
 
-                    <p class="qc-h1"><span class="qc-subhead ">Surtitre</span>Titre de niveau 1 avec surtitre</p>
+                    <p id="exemple-titre-h1"
+                       class="qc-h1"><span class="qc-subhead ">Surtitre</span>Titre de niveau 1 avec surtitre
+                    </p>
                     <p>
                         <strong>Taille de police/interlignage pour les h1</strong><br/>
                         <code>--qc-font-size-h1, --qc-line-height-h1</code>
                     </p>
+            <qc-code target-id="exemple-titre-h1"></qc-code>
                     <p class="qc-h2">Titre de niveau 2</p>
                     <p>
                         <strong>Taille de police/interlignage pour les h2</strong><br/>
