--- a/public/index.html
+++ b/public/index.html
@@ -980,7 +980,9 @@
             </table>
 
             <h5>Zones d'ajout de contenu HTML</h5>
+
             <p>Ci-dessous, les zones d'ajout de contenu HTML (balise &lt;slot&gt;) délimitées en pointillé.</p>
+
             <qc-piv-header id="qc-piv-header-slots"
                            style="margin-bottom: var(--qc-spacer-content-block-mb);"
                            enable-search="true"
@@ -1001,25 +1003,29 @@
             <h4>Exemples</h4>
             <h5>Exemple de base</h5>
             <qc-piv-footer id="piv-footer-1">
-                <ul>
-                    <li><a href="/">Accessibilité</a></li>
-                    <li><a href="/">Plan du site</a></li>
-                    <li><a href="/">Accès à l'information</a></li>
-                    <li><a href="/">Politique de confidentialité</a></li>
-                    <li><a href="/">Condition d'utilisation</a></li>
-                    <li><a href="/">À propos de Québec.ca</a></li>
-                </ul>
+                <nav>
+                    <ul>
+                        <li><a href="/">Accessibilité</a></li>
+                        <li><a href="/">Plan du site</a></li>
+                        <li><a href="/">Accès à l'information</a></li>
+                        <li><a href="/">Politique de confidentialité</a></li>
+                        <li><a href="/">Condition d'utilisation</a></li>
+                        <li><a href="/">À propos de Québec.ca</a></li>
+                    </ul>
+                </nav>
             </qc-piv-footer>
             <qc-code target-id="piv-footer-1"></qc-code>
 
             <h5>Exemple d'ajout de contenu HTML dans le composant</h5>
             <qc-piv-footer id="piv-footer-3">
-                <ul>
-                    <li><a href="/">Accessibilité</a></li>
-                    <li><a href="/">Plan du site</a></li>
-                    <li><a href="/">S'informer sur clicSÉQUR - Citoyens</a></li>
-                    <li><a href="/">FAQ</a></li>
-                </ul>
+                <nav>
+                    <ul>
+                        <li><a href="/">Accessibilité</a></li>
+                        <li><a href="/">Plan du site</a></li>
+                        <li><a href="/">S'informer sur clicSÉQUR - Citoyens</a></li>
+                        <li><a href="/">FAQ</a></li>
+                    </ul>
+                </nav>
                 <a slot="logo"
                     href="https://www.mess.gouv.qc.ca">
                     <img class="logo-mo"
