--- a/public/index.html
+++ b/public/index.html
@@ -336,23 +336,14 @@
             </p>
             <h3>Lien externe (qc-external-link)</h3>
 
-            <p>Le composant <code>qc-external-link</code> detecte les liens externes (c-à-d. dirigeant vers un nouveau site) en comparant le nom de domaine du lien et celui de la page. Si le lien est externe, une icône est ajoutée à la fin du lien, séparée du dernier mot par une espace insécable.</p>
+            <p>Le composant <code>qc-external-link</code> detecte les liens externes (c-à-d. dirigeant vers un nouveau site) en comparant le nom de domaine du lien et celui de la page. Il ajoute une icône à la fin du lien, séparée du dernier mot par une espace insécable.</p>
             <p>NB : le composant <code>qc-external-link</code> est ouvert, c-à-d. qu'il ne contient pas de DOM d'ombre (<i>shadow DOM</i>).</p>
 
             <h4>Exemples</h4>
 
-            <p id="exemple-lien-externe">
-                <qc-external-link >
-                    <a href="/foo/bar.html">Un lien interne</a>
-                </qc-external-link><br/>
-                <qc-external-link >
-                    <a href="javascript:;">Un lien avec <code>href="javascript:;"</code></a>
-                </qc-external-link><br/>
-                <qc-external-link >
-                    <a href="http://www.external.domain.com/">Un lien externe. Réduire la taille de l’écran pour constater l’espace insécable devant l’icone de lien externe.</a>
-                </qc-external-link><br/>
-                <qc-external-link is-external>
-                    <a href="javascript:;">Un lien que l'on force en externe.</a>
+            <p  id="exemple-lien-externe">
+                <qc-external-link>
+                    <a href="http://www.external.domain.com/">Un lien externe assez long. Réduire la taille de l’écran pour constater l’espace insécable devant l’icone de lien externe.</a>
                 </qc-external-link>
             </p>
 
@@ -365,36 +356,14 @@
                             'raw-code',
                             document
                                 .getElementById('exemple-lien-externe')
-                                .outerHTML
-                                .replace('is-external=""', 'is-external')
+                                .innerHTML
                         )
 
             </script>
 
             <h4>Attributs</h4>
 
-            <table class="qc-table qc-striped component-attributes-description">
-                <thead>
-                <tr>
-                    <th>Nom</th>
-                    <th>Valeur attendue</th>
-                    <th>Valeur par défaut</th>
-                    <th>Description</th>
-                </tr>
-                </thead>
-                <tr>
-                    <td>is-external</td>
-                    <td>Aucune</td>
-                    <td>Null</td>
-                    <td>Force le lien comme externe. La présence de l'attribut est suffisante, comme l'attribut <code>disabled</code> dans les champs de formulaire.</td>
-                </tr>
-                <tr>
-                    <td>external-icon-alt</td>
-                    <td>Texte</td>
-                    <td>Français : « Ce lien dirige vers un autre site. » ; autre langue : <i lang="en">"This link directs to another site."</i></td>
-                    <td>Texte alternatif de l'icône de lien externe.</td>
-                </tr>
-            </table>
+            <p>Ce composant n'a pas d'attributs.</p>
 
             <h3>Lien visité</h3>
             <p>
