Doc technique - réécriture pour sortir la navigation principale de l'en-tête

--- a/public/index.html
+++ b/public/index.html
@@ -25,43 +25,41 @@
                        title-text="Trousse de développement du Système de design gouvernemental"
                        alt-logo="Signature du gouvernement du Québec. Accédez au Système de design gouvernemental.">
         </qc-piv-header>
-
-        <div class="qc-container">
-            <h1>
-                <span class="qc-subhead"id="version"></span>
-                Documentation technique
-            </h1>
-            <div class="main-menu">
-                <p class="qc-h4">Bases</p>
-                <ul>
-                    <li><a href='#couleurs'>Couleurs</a></li>
-                    <li><a href='#grille'>Grille horizontale</a></li>
-                    <li><a href='#images'>Images</a></li>
-                    <li><a href='#liens'>Liens</a></li>
-                    <li><a href='#liste'>Liste</a></li>
-                    <li><a href='#titre'>Niveaux de titres</a></li>
-                    <li><a href='#ombrages'>Ombrages</a></li>
-                    <li><a href='#paragraphes'>Paragraphes</a></li>
-                    <li><a href='#polices'>Polices de caractères</a></li>
-                </ul>
-                <p class="qc-h4">Composants</p>
-                <ul>
-                    <li><a href='#separator'>Séparateur</a></li>
-                    <li><a href='#alert'>Alerte générale</a></li>
-                    <li><a href='#notice'>Avis</a></li>
-                    <li><a href='#piv'>Composants du PIV</a>
-                        <ul>
-                            <li><a href='#piv-header'>Bandeau d'en-tête du PIV</a>
-                            <li><a href='#piv-footer'>Pied de page du PIV</a>
-                        </ul>
-                    </li>
-                    <li><a href="#toTop">Haut de page</a></li>
-
-                </ul>
-            </div>
-        </div>
     </header>
+    <div class="qc-container">
+        <h1>
+            <span class="qc-subhead"id="version"></span>
+            Documentation technique
+        </h1>
+        <nav class="main-menu" aria-label="Navigation principale">
+            <h2 class="qc-h4">Bases</h2>
+            <ul>
+                <li><a href='#couleurs'>Couleurs</a></li>
+                <li><a href='#grille'>Grille horizontale</a></li>
+                <li><a href='#images'>Images</a></li>
+                <li><a href='#liens'>Liens</a></li>
+                <li><a href='#liste'>Liste</a></li>
+                <li><a href='#titre'>Niveaux de titres</a></li>
+                <li><a href='#ombrages'>Ombrages</a></li>
+                <li><a href='#paragraphes'>Paragraphes</a></li>
+                <li><a href='#polices'>Polices de caractères</a></li>
+            </ul>
+            <h2 class="qc-h4">Composants</h2>
+            <ul>
+                <li><a href='#separator'>Séparateur</a></li>
+                <li><a href='#alert'>Alerte générale</a></li>
+                <li><a href='#notice'>Avis</a></li>
+                <li><a href='#piv'>Composants du PIV</a>
+                    <ul>
+                        <li><a href='#piv-header'>Bandeau d'en-tête du PIV</a>
+                        <li><a href='#piv-footer'>Pied de page du PIV</a>
+                    </ul>
+                </li>
+                <li><a href="#toTop">Haut de page</a></li>
 
+            </ul>
+        </nav>
+    </div>
     <main id="main">
         <div class="qc-container">
             <hr/>
