Doc technique - ajout de composants pour la documentation + textes

--- a/public/index.html
+++ b/public/index.html
@@ -293,7 +293,8 @@
 <hr />
 
             <!-- images -->
-            <h2 id="images">Images</h2>
+            <h2 id="Figures">Figures</h2>
+            <p>Les figures servent en général pour l’affichage des images, mais aussi pour n’importe quel élément qui d</p>
             <figure>
                 <img src="img/figure-sample.png"
                      alt="Image avec légende">
