Doc technique - ajustement de la barre de navigation pour la rendre collante en haut de page (css position sticky)

--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,10 @@
                 <li><a href='#ombrages'>Ombrages</a></li>
                 <li><a href='#paragraphes'>Paragraphes</a></li>
                 <li><a href='#polices'>Polices de caractères</a></li>
+                <li><a href='#separator'>Séparateur</a></li>
             </ul>
             <h2 class="qc-h4">Composants</h2>
             <ul>
-                <li><a href='#separator'>Séparateur</a></li>
                 <li><a href='#alert'>Alerte générale</a></li>
                 <li><a href='#notice'>Avis</a></li>
                 <li><a href='#piv'>Composants du PIV</a>
@@ -332,13 +332,14 @@
                 <strong>Couleur</strong><br/>
                 <code >--qc-link-hover</code>
             </p>
-            <h3>Lien actif</h3>
+            <h3>Lien appuyé (pseudo-classe :active)</h3>
+
             <p>
                 <a href="javascript:;" class="pseudo-active">Règlement de pêche dans la zone 21.</a>
             </p>
             <p>
                 <strong>Couleur</strong><br/>
-                <code >--qc-link-active</code>
+                <code>--qc-link-active</code>
             </p>
             <h3>Lien externe (qc-external-link)</h3>
 
@@ -518,8 +519,6 @@
                     <code  >--qc-code-font-family</code>
                 </p>
             </div>
-
-<hr />
             <!-- Séparateur -->
             <h2 id="separator">Séparateur</h2>
 
@@ -530,6 +529,9 @@
             </div>
 
             <qc-code target-id="separateur-exemple"></qc-code>
+
+<hr />
+
 
             <!-- alerte générale -->
             <h2 id="alert">Alerte générale (qc-alert)</h2>
