Nettoyage searchBar + maj index retour de l'avis bleu

--- a/public/index.html
+++ b/public/index.html
@@ -649,6 +649,10 @@
                            title="Nouvelle règlementation"
                            content="Les nouveaux règlements de pêche seront en vigeur à partir du 12 mai.">
                 </qc-notice>
+                <qc-notice type="information"
+                            title="Nouvelle règlementation"
+                           content="Les nouveaux règlements de pêche seront en vigeur à partir du 12 mai.">
+                </qc-notice>
             </qc-doc-exemple>
             <qc-code target-id="exemple-avis-neutre" ></qc-code>
 
