Typographie - ajout du style pour le focus sur les liens + réécriture des autres pseudo-états

--- a/public/index.html
+++ b/public/index.html
@@ -321,16 +321,24 @@
             </p>
             <p>
                 <strong>Couleur</strong><br/>
-                <code >--qc-link-text</code>
+                <code >--qc-color-link-text</code>
             </p>
             <!-- TODO le focus n'est pas stylé -->
-            <h3>Lien au survol ou au focus</h3>
+            <h3>Lien au survol</h3>
             <p>
                 <a href="javascript:;" class="pseudo-hover">Règlement de pêche dans la zone 21.</a>
             </p>
             <p>
                 <strong>Couleur</strong><br/>
-                <code >--qc-link-hover</code>
+                <code >--qc-color-link-hover</code>
+            </p>
+            <h3>Lien au focus</h3>
+            <p>
+                <a href="javascript:;" class="pseudo-focus">Règlement de pêche dans la zone 21.</a>
+            </p>
+            <p>
+                <strong>Couleur de bordure externe</strong><br/>
+                <code >qc-color-link-focus-outline</code>
             </p>
             <h3>Lien appuyé (pseudo-classe :active)</h3>
 
@@ -339,7 +347,7 @@
             </p>
             <p>
                 <strong>Couleur</strong><br/>
-                <code>--qc-link-active</code>
+                <code>--qc-color-link-active</code>
             </p>
             <h3>Lien externe (qc-external-link)</h3>
 
