Alerte - réécriture pour utiliser les composants IconButton et Icon, qui gèrent le passage au thème sombre.

--- a/public/index.html
+++ b/public/index.html
@@ -431,7 +431,7 @@
             <div class="font-titles">
                 <h3><strong>Roboto</strong></h3>
                 <qc-doc-exemple id="font-roboto"
-                                aria-label="Exemple de texte en roboto, avec différentes graisses."
+                                caption="Exemple de texte en roboto, avec différentes graisses."
                     >
                     <div style="font-family: var(--qc-font-family-header);">
                         <p style="font-weight:var(--qc-font-weight-header-regular);">
