--- a/public/index.html
+++ b/public/index.html
@@ -404,14 +404,12 @@
             <qc-doc-exemple
                     caption="Exemple des différents niveaux d’élévation."
                     code-target-id="liste-elevation">
-                <div style="display: flex; gap: var(--qc-spacer-lg);"
-                     id="liste-elevation"
-                    >
-                    <p class="qc-shading-0">Élévation 0</p>
-                    <p class="qc-shading-1">Élévation 1</p>
-                    <p class="qc-shading-2">Élévation 2</p>
-                    <p class="qc-shading-3">Élévation 3</p>
-                    <p class="qc-shading-4">Élévation 4</p>
+                <div id="liste-elevation">
+                    <div class="qc-shading-0">Élévation 0</div>
+                    <div class="qc-shading-1">Élévation 1</div>
+                    <div class="qc-shading-2">Élévation 2</div>
+                    <div class="qc-shading-3">Élévation 3</div>
+                    <div class="qc-shading-4">Élévation 4</div>
                 </div>
             </qc-doc-exemple>
 
@@ -524,7 +522,7 @@
             <h3>Documentation technique</h3>
 
             <h4>Attributs</h4>
-
+            <div class="table-overflow">
             <table class="qc-table qc-striped component-attributes-description">
                 <thead>
                 <tr>
@@ -559,6 +557,7 @@
                     <td>Masque ou affiche l'alerte</td>
                 </tr>
             </table>
+            </div>
 
             <h4>Événement JS</h4>
 
@@ -662,7 +661,7 @@
             <h3>Documentation technique</h3>
 
             <h4>Attributs</h4>
-
+            <div class="table-overflow">
             <table class="qc-table qc-striped component-attributes-description">
                 <thead>
                     <tr>
@@ -705,7 +704,7 @@
                 </tr>
                 </tbody>
             </table>
-
+            </div>
             <h4>Zone d'ajout de contenu HTML</h4>
 
             <p>Ci-dessous, la zone d'ajout de contenu HTML (balise &lt;slot&gt;) délimitée en pointillé.</p>
@@ -743,37 +742,38 @@
             </qc-doc-exemple>
 
             <h3>Attributs</h3>
-
-            <table class="qc-table qc-striped component-attributes-description">
-                <thead>
-                <tr>
-                    <th>Nom</th>
-                    <th>Valeur attendue</th>
-                    <th>Valeur par défaut</th>
-                    <th>Description</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>submit-value</td>
-                    <td>Texte</td>
-                    <td>Chaine vide</td>
-                    <td>Valeur du bouton submit</td>
-                </tr>
-                <tr>
-                    <td>submit-name</td>
-                    <td>Texte</td>
-                    <td>Chaine vide</td>
-                    <td>Nom du bouton submit</td>
-                </tr>
-                <tr>
-                    <td>piv-background</td>
-                    <td>Aucune (simplement ajouter l'attribut)</td>
-                    <td>False</td>
-                    <td>Indique que la barre de recherche est sur fond bleu PIV</td>
-                </tr>
-                </tbody>
-            </table>
+            <div class="table-overflow">
+                <table class="qc-table qc-striped component-attributes-description">
+                    <thead>
+                    <tr>
+                        <th>Nom</th>
+                        <th>Valeur attendue</th>
+                        <th>Valeur par défaut</th>
+                        <th>Description</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>submit-value</td>
+                        <td>Texte</td>
+                        <td>Chaine vide</td>
+                        <td>Valeur du bouton submit</td>
+                    </tr>
+                    <tr>
+                        <td>submit-name</td>
+                        <td>Texte</td>
+                        <td>Chaine vide</td>
+                        <td>Nom du bouton submit</td>
+                    </tr>
+                    <tr>
+                        <td>piv-background</td>
+                        <td>Aucune (simplement ajouter l'attribut)</td>
+                        <td>False</td>
+                        <td>Indique que la barre de recherche est sur fond bleu PIV</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
 
             <h3>Zone d'ajout de contenu HTML</h3>
             <p>Aucune zone d'ajout de contenu n'est définie pour ce composant</p>
@@ -846,6 +846,7 @@
 
             <h4>Documentation technique</h4>
             <h5>Attributs</h5>
+            <div class="table-overflow">
             <table class="qc-table qc-striped component-attributes-description">
                 <thead>
                     <tr>
@@ -968,7 +969,7 @@
                     </tr>
                 </tbody>
             </table>
-
+            </div>
             <h5>Zones d'ajout de contenu HTML</h5>
 
             <p>Ci-dessous, les zones d'ajout de contenu HTML (balise &lt;slot&gt;) délimitées en pointillé.</p>
@@ -1051,7 +1052,7 @@
             <h4>Documentation technique</h4>
 
             <h5>Attributs</h5>
-
+            <div class="table-overflow">
             <table class="qc-table qc-striped component-attributes-description">
                 <thead>
                 <tr>
@@ -1112,7 +1113,7 @@
 
                 </tbody>
             </table>
-
+            </div>
 
             <h5>Zones d'ajout de contenu HTML</h5>
 
@@ -1156,7 +1157,7 @@
             <h3>Documentation technique</h3>
 
             <h4>Attributs</h4>
-
+            <div class="table-overflow">
             <table class="qc-table qc-striped">
                 <thead>
                     <tr>
@@ -1181,6 +1182,7 @@
                     </tr>
                 </tbody>
             </table>
+            </div>
         </div>
     </main>
     <footer>
