Alerte - Ajout d'un attribut full-width, pour afficher l'alerte sur toute la largeur.

--- a/public/index.html
+++ b/public/index.html
@@ -556,6 +556,12 @@
                     <td>"false"</td>
                     <td>Masque ou affiche l'alerte</td>
                 </tr>
+                <tr>
+                    <td>full-width</td>
+                    <td>"true" ou "false"</td>
+                    <td>"false"</td>
+                    <td>Affiche le contenu de l’alerte dans un conteneur pleine-largeur (classe css qc-container-fluid)</td>
+                </tr>
             </table>
             </div>
 
